dnl ***********************************
dnl *** include special GLib macros ***
dnl ***********************************
builtin(include, acglib.m4)dnl

# require autoconf 2.13
AC_PREREQ(2.13)

# Process this file with autoconf to produce a configure script.
AC_INIT(glist.c)

# Save this value here, since automake will set cflags later
cflags_set=${CFLAGS+set}

# we rewrite this file
rm -f glibconfig-sysdefs.h

dnl we need to AC_DIVERT_PUSH/AC_DIVERT_POP these variable definitions so they
dnl are available for $ac_help expansion (don't we all *love* autoconf?)
AC_DIVERT_PUSH(AC_DIVERSION_NOTICE)dnl
#
# The following version number definitions apply to GLib, GModule and GThread
# as a whole, so if changes occoured in any of them, they are all
# treated with the same interface and binary age.
#
# Making releases:
#   GLIB_MICRO_VERSION += 1;
#   GLIB_INTERFACE_AGE += 1;
#   GLIB_BINARY_AGE += 1;
# if any functions have been added, set GLIB_INTERFACE_AGE to 0.
# if backwards compatibility has been broken,
# set GLIB_BINARY_AGE _and_ GLIB_INTERFACE_AGE to 0.
#
GLIB_MAJOR_VERSION=1
GLIB_MINOR_VERSION=3
GLIB_MICRO_VERSION=1
GLIB_INTERFACE_AGE=0
GLIB_BINARY_AGE=0
GLIB_VERSION=$GLIB_MAJOR_VERSION.$GLIB_MINOR_VERSION.$GLIB_MICRO_VERSION
dnl
AC_DIVERT_POP()dnl

AC_SUBST(GLIB_MAJOR_VERSION)
AC_SUBST(GLIB_MINOR_VERSION)
AC_SUBST(GLIB_MICRO_VERSION)
AC_SUBST(GLIB_VERSION)
AC_SUBST(GLIB_INTERFACE_AGE)
AC_SUBST(GLIB_BINARY_AGE)

# libtool versioning
LT_RELEASE=$GLIB_MAJOR_VERSION.$GLIB_MINOR_VERSION
LT_CURRENT=`expr $GLIB_MICRO_VERSION - $GLIB_INTERFACE_AGE`
LT_REVISION=$GLIB_INTERFACE_AGE
LT_AGE=`expr $GLIB_BINARY_AGE - $GLIB_INTERFACE_AGE`
AC_SUBST(LT_RELEASE)
AC_SUBST(LT_CURRENT)
AC_SUBST(LT_REVISION)
AC_SUBST(LT_AGE)

VERSION=$GLIB_VERSION
PACKAGE=glib

AM_INIT_AUTOMAKE($PACKAGE, $VERSION, no-define)

# Specify a configuration file
AM_CONFIG_HEADER(config.h)

AC_DEFINE_UNQUOTED(GLIB_MAJOR_VERSION, $GLIB_MAJOR_VERSION)
AC_DEFINE_UNQUOTED(GLIB_MINOR_VERSION, $GLIB_MINOR_VERSION)
AC_DEFINE_UNQUOTED(GLIB_MICRO_VERSION, $GLIB_MICRO_VERSION)
AC_DEFINE_UNQUOTED(GLIB_INTERFACE_AGE, $GLIB_INTERFACE_AGE)
AC_DEFINE_UNQUOTED(GLIB_BINARY_AGE, $GLIB_BINARY_AGE)

dnl Initialize libtool
AM_PROG_LIBTOOL

dnl Initialize maintainer mode
AM_MAINTAINER_MODE

AC_CANONICAL_HOST

AC_MSG_CHECKING(for the BeOS)
case $host in
  *-*-beos*)
    glib_native_beos="yes"
    ;;
  *)
    glib_native_beos="no"
    ;;
esac
AC_MSG_RESULT([$glib_native_beos])

dnl figure debugging default, prior to $ac_help setup
dnl
AC_DIVERT_PUSH(AC_DIVERSION_NOTICE)dnl
if test `expr $GLIB_MINOR_VERSION \% 2` = 1 ; then
	debug_default=yes
else
	debug_default=minimum
fi
AC_DIVERT_POP()dnl

dnl declare --enable-* args and collect ac_help strings
AC_ARG_ENABLE(debug, [  --enable-debug=[no/minimum/yes] turn on debugging [default=$debug_default]],,enable_debug=$debug_default)
AC_ARG_ENABLE(msg-prefix, [  --enable-msg-prefix     turn on program name and PID prefixing of messages and warnings],,enable_msg_prefix=no)
AC_ARG_ENABLE(mem_check, [  --enable-mem-check      turn on malloc/free sanity checking [default=no]],,enable_mem_check=no)
AC_ARG_ENABLE(mem_profile, [  --enable-mem-profile    turn on malloc profiling atexit [default=no]],,enable_mem_profile=no)
AC_ARG_ENABLE(ansi, [  --enable-ansi           turn on strict ansi [default=no]],
		    , enable_ansi=no)
AC_ARG_ENABLE(threads, [  --enable-threads        turn on basic thread support [default=yes]
                          ([=no] will override --with-threads)],,enable_threads=yes)

if test "x$enable_threads" != "xyes"; then
  enable_threads=no
fi

AC_MSG_CHECKING(whether to enable memory checking)
if test "x$enable_mem_check" = "xyes"; then
  AC_DEFINE(ENABLE_MEM_CHECK, 1)
  AC_SUBST(ENABLE_MEM_CHECK)
  AC_MSG_RESULT(yes)
else
  AC_MSG_RESULT(no)
fi

AC_MSG_CHECKING(whether to enable memory profiling)
if test "x$enable_mem_profile" = "xyes"; then
  AC_DEFINE(ENABLE_MEM_PROFILE, 1)
  AC_SUBST(ENABLE_MEM_PROFIL, fuzzy
msgid "untitled"
msgstr "Unità"

#. message_box ();
#: plug-ins/gflare/gflare.c:3202 plug-ins/gflare/gflare.c:3270
#, c-format
msgid "The name `%s' is used already!"
msgstr ""

#: plug-ins/gflare/gflare.c:3251
msgid "Copy GFlare"
msgstr ""

#: plug-ins/gflare/gflare.c:3252
msgid "Enter a name for the copied GFlare"
msgstr ""

#. message_box ()
#: plug-ins/gflare/gflare.c:3300
msgid "Cannot delete!! There must be at least one GFlare."
msgstr ""

#: plug-ins/gflare/gflare.c:3305
#, fuzzy
msgid "Delete GFlare"
msgstr "Seleziona"

#. Question
#: plug-ins/gflare/gflare.c:3317
#, c-format
msgid "Are you sure you want to delete \"%s\" from the list and from disk?"
msgstr ""

#: plug-ins/gflare/gflare.c:3389
#, c-format
msgid "not found %s in gflares_list"
msgstr ""

#: plug-ins/gflare/gflare.c:3436
msgid "GFlare Editor"
msgstr ""

#: plug-ins/gflare/gflare.c:3465
#, fuzzy
msgid "Rescan Gradients"
msgstr "Verde"

#: plug-ins/gflare/gflare.c:3584
#, fuzzy
msgid "Glow Opacity (%):"
msgstr "Opacita' [%d]: "

#: plug-ins/gflare/gflare.c:3590
#, fuzzy
msgid "Glow Mode:"
msgstr "Modalità:"

#: plug-ins/gflare/gflare.c:3592
#, fuzzy
msgid "Rays Opacity (%):"
msgstr "Opacita' [%d]: "

#: plug-ins/gflare/gflare.c:3598
#, fuzzy
msgid "Rays Mode:"
msgstr "Modalità:"

#: plug-ins/gflare/gflare.c:3600
msgid "Second Flares Opacity (%):"
msgstr ""

#: plug-ins/gflare/gflare.c:3606
#, fuzzy
msgid "Second Flares Mode:"
msgstr "Colore"

#.
#. *	Create Page
#.
#: plug-ins/gflare/gflare.c:3614 plug-ins/gimpressionist/general.c:134
#: plug-ins/gimpressionist/general.c:139
#, fuzzy
msgid "General"
msgstr "Opzioni Generali"

#: plug-ins/gflare/gflare.c:3646 plug-ins/gflare/gflare.c:3720
#: plug-ins/gflare/gflare.c:3812
#, fuzzy
msgid "Radial Gradient:"
msgstr "Verde"

#: plug-ins/gflare/gflare.c:3650 plug-ins/gflare/gflare.c:3724
#, fuzzy
msgid "Angular Gradient:"
msgstr "Verde"

#: plug-ins/gflare/gflare.c:3654 plug-ins/gflare/gflare.c:3728
msgid "Angular Size Gradient:"
msgstr ""

#: plug-ins/gflare/gflare.c:3667 plug-ins/gflare/gflare.c:3742
#: plug-ins/gflare/gflare.c:3834
#, fuzzy
msgid "Size (%):"
msgstr "Dimensione:"

#.
#. *	Create Page
#.
#: plug-ins/gflare/gflare.c:3688
#, fuzzy
msgid "Glow"
msgstr "Naviga"

#: plug-ins/gflare/gflare.c:3754
#, fuzzy
msgid "# of Spikes:"
msgstr "Modalità di movimento:"

#: plug-ins/gflare/gflare.c:3758
#, fuzzy
msgid "Spike Thickness:"
msgstr "Spessore"

#.
#. *	Create Pages
#.
#: plug-ins/gflare/gflare.c:3770
msgid "Rays"
msgstr ""

#: plug-ins/gflare/gflare.c:3816
#, fuzzy
msgid "Size Factor Gradient:"
msgstr "Verde"

#: plug-ins/gflare/gflare.c:3820
msgid "Probability Gradient:"
msgstr ""

#: plug-ins/gflare/gflare.c:3855 plug-ins/imagemap/imap_circle.c:59
#: plug-ins/imagemap/imap_menu.c:386 plug-ins/imagemap/imap_popup.c:134
#, fuzzy
msgid "Circle"
msgstr "File"

#: plug-ins/gflare/gflare.c:3866 plug-ins/imagemap/imap_menu.c:388
#: plug-ins/imagemap/imap_polygon.c:68 plug-ins/imagemap/imap_popup.c:137
msgid "Polygon"
msgstr ""

#: plug-ins/gflare/gflare.c:3892
msgid "Shape of Second Flares"
msgstr ""

#: plug-ins/gflare/gflare.c:3903
msgid "Random Seed (-1 means current time):"
msgstr ""

#.
#. *	Create Pages
#.
#: plug-ins/gflare/gflare.c:3923
#, fuzzy
msgid "Second Flares"
msgstr "Utilizza Colore di Sfondo"

#: plug-ins/gflare/gflare.c:4560
#, fuzzy
msgid "none"
msgstr "Nessuna"

#: plug-ins/gflare/gflare.c:4573
#, c-format
msgid "Not found \"%s\": used \"%s\" instead"
msgstr ""

#: plug-ins/gflare/gflare.c:4643
#, fuzzy
msgid "More..."
msgstr "Altri..."

#: plug-ins/gfli/gfli.c:437 plug-ins/gfli/gfli.c:476 plug-ins/gfli/gfli.c:699
#, fuzzy, c-format
msgid "FLI: can't open \"%s\"\n"
msgstr "%s: impossibile aprire \"%s\"\n"

#: plug-ins/gfli/gfli.c:536
#, fuzzy, c-format
msgid "Frame (%i)"
msgstr "Frame %d"

#: plug-ins/gfli/gfli.c:633
#, fuzzy
msgid "FLI: Sorry, can't save images with Alpha.\n"
msgstr "Impossibile salvare immagini con alpha\n"

#: plug-ins/gfli/gfli.c:663
msgid "FLI: Sorry, I can save only INDEXED and GRAY images.\n"
msgstr ""

#: plug-ins/gfli/gfli.c:832
msgid "GFLI 1.2 - Load framestack"
msgstr ""

#: plug-ins/gfli/gfli.c:903
msgid "GFLI 1.2 - Save framestack"
msgstr ""

#: plug-ins/gimpressionist/brush.c:183
msgid "GIMPressionist: Can only save drawables!\n"
msgstr ""

#: plug-ins/gimpressionist/brush.c:189
msgid "Save brush"
msgstr ""

#: plug-ins/gimpressionist/brush.c:392
#, fuzzy
msgid "Brush Preview:"
msgstr "Anteprima"

#.
#. * Gamma slider...
#.
#: plug-ins/gimpressionist/brush.c:401 plug-ins/print/print.c:1086
msgid "Gamma:"
msgstr ""

#: plug-ins/gimpressionist/brush.c:414
msgid "Changes the gamma (brightness) of the selected brush"
msgstr ""

#: plug-ins/gimpressionist/brush.c:426
msgid "Select:"
msgstr ""

#: plug-ins/gimpressionist/brush.c:431
#, fuzzy
msgid "Aspect ratio:"
msgstr "Mantieni dimensioni"

#: plug-ins/gimpressionist/brush.c:435 plug-ins/gimpressionist/paper.c:173
msgid "Relief:"
msgstr ""

#: plug-ins/gimpressionist/brush.c:450
#, fuzzy
msgid "(None)"
msgstr "Nessuna"

#: plug-ins/gimpressionist/brush.c:463
#, fuzzy
msgid "Save..."
msgstr "Salva"

#: plug-ins/gimpressionist/brush.c:477
msgid "Specifies the aspect ratio of the brush"
msgstr ""

#: plug-ins/gimpressionist/brush.c:488
msgid "Specifies the amount of embossing to apply to each brush stroke"
msgstr ""

#: plug-ins/gimpressionist/color.c:86
msgid "Average under brush"
msgstr ""

#: plug-ins/gimpressionist/color.c:92
msgid "Color is computed from the average of all pixels under the brush"
msgstr ""

#: plug-ins/gimpressionist/color.c:96
msgid "Center of brush"
msgstr ""

#: plug-ins/gimpressionist/color.c:102
msgid "Samples the color from the pixel in the center of the brush"
msgstr ""

#: plug-ins/gimpressionist/color.c:111
#, fuzzy
msgid "Color noise:"
msgstr "Colorify"

#: plug-ins/gimpressionist/color.c:122
msgid "Adds random noise to the color"
msgstr ""

#: plug-ins/gimpressionist/general.c:156
msgid "Edge darken:"
msgstr ""

#: plug-ins/gimpressionist/general.c:173
msgid "How much to \"darken\" the edges of each brush stroke"
msgstr ""

#: plug-ins/gimpressionist/general.c:180
#, fuzzy
msgid "Background:"
msgstr "Sfondo"

#: plug-ins/gimpressionist/general.c:188
#, fuzzy
msgid "Keep original"
msgstr "Trattenere ambiente originale"

#: plug-ins/gimpressionist/general.c:194
msgid "Preserve the original image as a background"
msgstr ""

#: plug-ins/gimpressionist/general.c:198
#, fuzzy
msgid "From paper"
msgstr "Da immagine"

#: plug-ins/gimpressionist/general.c:204
msgid "Copy the texture of the selected paper as a background"
msgstr ""

#: plug-ins/gimpressionist/general.c:223
msgid "Solid colored background"
msgstr ""

#: plug-ins/gimpressionist/general.c:246
msgid "Use a transparent background; Only the strokes painted will be visible"
msgstr ""

#: plug-ins/gimpressionist/general.c:261
#, fuzzy
msgid "Paint edges"
msgstr "Interi Fast"

#: plug-ins/gimpressionist/general.c:269
msgid "Tileable"
msgstr ""

#: plug-ins/gimpressionist/general.c:273
msgid "Selects if the resulting image should be seamlessly tileable"
msgstr ""

#: plug-ins/gimpressionist/general.c:281
msgid "Drop Shadow"
msgstr ""

#: plug-ins/gimpressionist/general.c:285
msgid "Adds a shadow effect to each brush stroke"
msgstr ""

#: plug-ins/gimpressionist/general.c:296
msgid "How much to \"darken\" the drop shadow"
msgstr ""

#: plug-ins/gimpressionist/general.c:302
msgid "Shadow depth:"
msgstr ""

#: plug-ins/gimpressionist/general.c:313
msgid ""
"The depth of the drop shadow, i.e. how far apart from the object it should be"
msgstr ""

#: plug-ins/gimpressionist/general.c:319
msgid "Shadow blur:"
msgstr ""

#: plug-ins/gimpressionist/general.c:330
msgid "How much to blur the drop shadow"
msgstr ""

#: plug-ins/gimpressionist/general.c:336
#, fuzzy
msgid "Deviation threshold:"
msgstr "Soglia:"

#: plug-ins/gimpressionist/general.c:347
msgid "A bailout-value for adaptive selections"
msgstr ""

#: plug-ins/gimpressionist/gimp.c:100 plug-ins/gimpressionist/gimp.c:101
#, fuzzy
msgid "Performs various artistic operations on an image"
msgstr "Applica vari effetti luce ad una immagine"

#: plug-ins/gimpressionist/gimp.c:105
#, fuzzy
msgid "<Image>/Filters/Artistic/GIMPressionist..."
msgstr "<Image>/Filters/Artistic/Cubismo"

#: plug-ins/gimpressionist/gimp.c:294
#, fuzzy
msgid "Painting..."
msgstr "Stampa in corso..."

#: plug-ins/gimpressionist/gimpressionist.c:90
#, c-format
msgid ""
"*** Warning ***\n"
"It is highly recommended to add\n"
"  (gimpressionist-path \"%s\")\n"
"(or similar) to your gimprc file.\n"
msgstr ""

#: plug-ins/gimpressionist/gimpressionist.c:107
msgid ""
"*** Warning ***\n"
"No home directory!\n"
msgstr ""

#: plug-ins/gimpressionist/gimpressionist.c:358
#: plug-ins/gimpressionist/gimpressionist.c:455
msgid "The GIMPressionist!"
msgstr ""

#: plug-ins/gimpressionist/gimpressionist.c:497
#, fuzzy
msgid "Run with the selected settings"
msgstr "Settaggi di caricamente selettivo"

#: plug-ins/gimpressionist/gimpressionist.c:504
msgid "Quit the program"
msgstr ""

#: plug-ins/gimpressionist/gimpressionist.c:506
msgid "About..."
msgstr "Informazioni"

#: plug-ins/gimpressionist/gimpressionist.c:511
msgid "Show some information about program"
msgstr ""

#: plug-ins/gimpressionist/orientation.c:73
#, fuzzy
msgid "Directions:"
msgstr "Vettore direzione"

#: plug-ins/gimpressionist/orientation.c:77
msgid "Start angle:"
msgstr ""

#: plug-ins/gimpressionist/orientation.c:81
msgid "Angle span:"
msgstr ""

#: plug-ins/gimpressionist/orientation.c:96 plug-ins/gimpressionist/size.c:95
msgid "The number of directions (i.e. brushes) to use"
msgstr ""

#: plug-ins/gimpressionist/orientation.c:105
msgid "The angle of the first brush to create"
msgstr ""

#: plug-ins/gimpressionist/orientation.c:114
msgid "How large an angle-span to use (360 = full circle)"
msgstr ""

#.
#. * Orientation option menu...
#.
#: plug-ins/gimpressionist/orientation.c:121 plug-ins/print/print.c:889
msgid "Orientation:"
msgstr "Orientazione:"

#: plug-ins/gimpressionist/orientation.c:137
msgid ""
"Let the value (brightness) of the region determine the direction of the "
"stroke"
msgstr ""

#: plug-ins/gimpressionist/orientation.c:141
#: plug-ins/gimpressionist/size.c:140
msgid "Radius"
msgstr ""

#: plug-ins/gimpressionist/orientation.c:147
msgid ""
"The distance from the center of the image determines the direction of the "
"stroke"
msgstr ""

#: plug-ins/gimpressionist/orientation.c:157
msgid "Selects a random direction of each stroke"
msgstr ""

#: plug-ins/gimpressionist/orientation.c:167
msgid "Let the direction from the center determine the direction of the stroke"
msgstr ""

#: plug-ins/gimpressionist/orientation.c:176
#: plug-ins/gimpressionist/size.c:175
#, fuzzy
msgid "Flowing"
msgstr "Colorazione"

#: plug-ins/gimpressionist/orientation.c:182
#: plug-ins/gimpressionist/size.c:181
msgid "The strokes follow a \"flowing\" pattern"
msgstr ""

#: plug-ins/gimpressionist/orientation.c:194
msgid "The hue of the region determines the direction of the stroke"
msgstr ""

#: plug-ins/gimpressionist/orientation.c:204
msgid "The direction that matches the original image the closest is selected"
msgstr ""

#: plug-ins/gimpressionist/orientation.c:213
#: plug-ins/gimpressionist/size.c:210
msgid "Manual"
msgstr "Manuale"

#: plug-ins/gimpressionist/orientation.c:219
msgid "Manually specify the stroke orientation"
msgstr ""

#: plug-ins/gimpressionist/orientation.c:223
#: plug-ins/gimpressionist/size.c:220
msgid "Edit..."
msgstr ""

#: plug-ins/gimpressionist/orientation.c:228
msgid "Opens up the Orientation Map Editor"
msgstr ""

#: plug-ins/gimpressionist/orientmap.c:461
#, fuzzy
msgid "Orientation Map Editor"
msgstr "Orientazione:"

#: plug-ins/gimpressionist/orientmap.c:469
msgid "Vectors"
msgstr ""

#: plug-ins/gimpressionist/orientmap.c:479
msgid ""
"The vector-field. Left-click to move selected vector, Right-click to point "
"it towards mouse, Middle-click to add a new vector."
msgstr ""

#: plug-ins/gimpressionist/orientmap.c:500
#: plug-ins/gimpressionist/sizemap.c:400
msgid "Adjust the preview's brightness"
msgstr ""

#: plug-ins/gimpressionist/orientmap.c:522
#, fuzzy
msgid "Select previous vector"
msgstr "Vettore direzione"

#: plug-ins/gimpressionist/orientmap.c:529
#, fuzzy
msgid "Select next vector"
msgstr "Vettore direzione"

#: plug-ins/gimpressionist/orientmap.c:536
msgid "Add new vector"
msgstr ""

#: plug-ins/gimpressionist/orientmap.c:538
#: plug-ins/gimpressionist/sizemap.c:438
msgid "Kill"
msgstr ""

#: plug-ins/gimpressionist/orientmap.c:543
msgid "Delete selected vector"
msgstr ""

#: plug-ins/gimpressionist/orientmap.c:563
msgid "Change the angle of the selected vector"
msgstr ""

#: plug-ins/gimpressionist/orientmap.c:577
msgid "Change the strength of the selected vector"
msgstr ""

#: plug-ins/gimpressionist/orientmap.c:596
msgid "Vortex"
msgstr ""

#: plug-ins/gimpressionist/orientmap.c:608
msgid "Vortex2"
msgstr ""

#: plug-ins/gimpressionist/orientmap.c:614
msgid "Vortex3"
msgstr ""

#: plug-ins/gimpressionist/orientmap.c:631
#: plug-ins/gimpressionist/sizemap.c:490
msgid "Apply and exit the editor"
msgstr ""

#: plug-ins/gimpressionist/orientmap.c:638
#: plug-ins/gimpressionist/sizemap.c:497
msgid "Apply, but stay inside the editor"
msgstr ""

#: plug-ins/gimpressionist/orientmap.c:645
#: plug-ins/gimpressionist/sizemap.c:504
msgid "Cancel all changes and exit"
msgstr ""

#: plug-ins/gimpressionist/orientmap.c:653
#: plug-ins/gimpressionist/sizemap.c:512
msgid "Strength exp.:"
msgstr ""

#: plug-ins/gimpressionist/orientmap.c:665
#: plug-ins/gimpressionist/sizemap.c:524
msgid "Change the exponent of the strength"
msgstr ""

#: plug-ins/gimpressionist/orientmap.c:667
#, fuzzy
msgid "Angle offset:"
msgstr "X offset"

#: plug-ins/gimpressionist/orientmap.c:679
msgid "Offset all vectors with a given angle"
msgstr ""

#: plug-ins/gimpressionist/orientmap.c:681
#: plug-ins/gimpressionist/sizemap.c:527
msgid "Voronoi"
msgstr ""

#: plug-ins/gimpressionist/orientmap.c:689
msgid ""
"Voronoi-mode makes only the vector closest to the given point have any "
"influence"
msgstr ""

#: plug-ins/gimpressionist/paper.c:89 plug-ins/gimpressionist/paper.c:94
msgid "Paper"
msgstr ""

#: plug-ins/gimpressionist/paper.c:130
#, fuzzy
msgid "Paper Preview:"
msgstr "Anteprima Immagine"

#. updatepaperprev(NULL);
#: plug-ins/gimpressionist/paper.c:141
#, fuzzy
msgid "Invert"
msgstr "Interi"

#: plug-ins/gimpressionist/paper.c:148
msgid "Inverts the Papers texture"
msgstr ""

#: plug-ins/gimpressionist/paper.c:156
msgid "Applies the paper as it is (without embossing it)"
msgstr ""

#: plug-ins/gimpressionist/paper.c:188
msgid "Specifies the scale of the texture (in percent of original file)"
msgstr ""

#: plug-ins/gimpressionist/paper.c:197
msgid "Specifies the amount of embossing to apply to the image (in percent)"
msgstr ""

#: plug-ins/gimpressionist/placement.c:52
#: plug-ins/gimpressionist/placement.c:57
#, fuzzy
msgid "Placement"
msgstr "Percentuale"

#: plug-ins/gimpressionist/placement.c:77
msgid "Placement:"
msgstr ""

#: plug-ins/gimpressionist/placement.c:87
#, fuzzy
msgid "Randomly"
msgstr "Seme casuale"

#: plug-ins/gimpressionist/placement.c:93
msgid "Place strokes randomly around the image"
msgstr ""

#: plug-ins/gimpressionist/placement.c:97
msgid "Evenly distributed"
msgstr ""

#: plug-ins/gimpressionist/placement.c:103
msgid "The strokes are evenly distributed across the image"
msgstr ""

#: plug-ins/gimpressionist/placement.c:112
msgid "Stroke density:"
msgstr ""

#: plug-ins/gimpressionist/placement.c:123
msgid "The relative density of the brush strokes"
msgstr ""

#: plug-ins/gimpressionist/placement.c:125
msgid "Centerize"
msgstr ""

#: plug-ins/gimpressionist/placement.c:129
msgid "Focus the brush strokes around the center of the image"
msgstr ""

#: plug-ins/gimpressionist/presets.c:572 plug-ins/gimpressionist/presets.c:577
msgid "Presets"
msgstr ""

#: plug-ins/gimpressionist/presets.c:596
#, fuzzy
msgid "Save current"
msgstr "Salva Punti"

#: plug-ins/gimpressionist/presets.c:602
msgid "Save the current settings to the specified file"
msgstr ""

#: plug-ins/gimpressionist/presets.c:646
msgid "Reads the selected Preset into memory"
msgstr ""

#: plug-ins/gimpressionist/presets.c:654
msgid "Deletes the selected Preset"
msgstr ""

#: plug-ins/gimpressionist/presets.c:656
msgid "Refresh"
msgstr ""

#: plug-ins/gimpressionist/presets.c:662
msgid "Reread the directory of Presets"
msgstr ""

#: plug-ins/gimpressionist/presets.c:664
msgid "(Desc)"
msgstr ""

#: plug-ins/gimpressionist/presets.c:669
msgid ""
"\n"
"If you come up with some nice Presets,\n"
"(or Brushes and Papers for that matter)\n"
"feel free to send them to me <vidar@prosalg.no>\n"
"for inclusion into the next release!\n"
msgstr ""

#: plug-ins/gimpressionist/preview.c:122
msgid "Refresh the Preview window"
msgstr ""

#: plug-ins/gimpressionist/preview.c:129
#, fuzzy
msgid "Revert to the original image"
msgstr "Ruotate l'intera immagine"

#: plug-ins/gimpressionist/size.c:51 plug-ins/gimpressionist/size.c:56
msgid "Size"
msgstr "Dimensione"

#: plug-ins/gimpressionist/size.c:72
msgid "Sizes:"
msgstr "Dimensioni:"

#: plug-ins/gimpressionist/size.c:76
msgid "Min size:"
msgstr "Dimensione Minima:"

#: plug-ins/gimpressionist/size.c:80
msgid "Max size:"
msgstr "Dimensione Massima:"

#: plug-ins/gimpressionist/size.c:104
msgid "The smallest brush to create"
msgstr ""

#: plug-ins/gimpressionist/size.c:113
msgid "The largest brush to create"
msgstr ""

#: plug-ins/gimpressionist/size.c:136
msgid ""
"Let the value (brightness) of the region determine the size of the stroke"
msgstr ""

#: plug-ins/gimpressionist/size.c:146
msgid ""
"The distance from the center of the image determines the size of the stroke"
msgstr ""

#: plug-ins/gimpressionist/size.c:156
msgid "Selects a random size for each stroke"
msgstr ""

#: plug-ins/gimpressionist/size.c:166
msgid "Let the direction from the center determine the size of the stroke"
msgstr ""

#: plug-ins/gimpressionist/size.c:192
msgid "The hue of the region determines the size of the stroke"
msgstr ""

#: plug-ins/gimpressionist/size.c:202
msgid "The brush-size that matches the original image the closest is selected"
msgstr ""

#: plug-ins/gimpressionist/size.c:216
msgid "Manually specify the stroke size"
msgstr ""

#: plug-ins/gimpressionist/size.c:225
msgid "Opens up the Size Map Editor"
msgstr ""

#: plug-ins/gimpressionist/sizemap.c:361
msgid "Size Map Editor"
msgstr ""

#: plug-ins/gimpressionist/sizemap.c:369
msgid "Smvectors"
msgstr ""

#: plug-ins/gimpressionist/sizemap.c:379
msgid ""
"The smvector-field. Left-click to move selected smvector, Right-click to "
"point it towards mouse, Middle-click to add a new smvector."
msgstr ""

#: plug-ins/gimpressionist/sizemap.c:422
#, fuzzy
msgid "Select previous smvector"
msgstr "Vettore direzione"

#: plug-ins/gimpressionist/sizemap.c:429
#, fuzzy
msgid "Select next smvector"
msgstr "Vettore direzione"

#: plug-ins/gimpressionist/sizemap.c:436
msgid "Add new smvector"
msgstr ""

#: plug-ins/gimpressionist/sizemap.c:443
msgid "Delete selected smvector"
msgstr ""

#: plug-ins/gimpressionist/sizemap.c:463
msgid "Change the angle of the selected smvector"
msgstr ""

#: plug-ins/gimpressionist/sizemap.c:477
msgid "Change the strength of the selected smvector"
msgstr ""

#: plug-ins/gimpressionist/sizemap.c:535
msgid ""
"Voronoi-mode makes only the smvector closest to the given point have any "
"influence"
msgstr ""

#: plug-ins/helpbrowser/helpbrowser.c:91
#, c-format
msgid ""
"<html><head><title>Document not found</title></head><body "
"bgcolor=\"#ffffff\"><center><p>%s<h3>Couldn't find "
"document</h3><tt>%s</tt></center><p><small>This either means that the help "
"for this topic has not been written yet or that something is wrong with your "
"installation. Please check carefully before you report this as a "
"bug.</small></body></html>"
msgstr ""

#: plug-ins/helpbrowser/helpbrowser.c:107
#, c-format
msgid ""
"<html><head><title>Directory not found</title></head><body "
"bgcolor=\"#ffffff\"><center><p>%s<h3>Couldn't change to "
"directory</h3><tt>%s</tt><h3>while trying to "
"access</h3><tt>%s</tt></center><p><small>This either means that the help for "
"this topic has not been written yet or that something is wrong with your "
"installation. Please check carefully before you report this as a "
"bug.</small></body></html>"
msgstr ""

#: plug-ins/helpbrowser/helpbrowser.c:133
#, fuzzy
msgid "Contents"
msgstr "Commento GIF: "

#: plug-ins/helpbrowser/helpbrowser.c:142
msgid "Index"
msgstr ""

#: plug-ins/helpbrowser/helpbrowser.c:397 plug-ins/imagemap/imap_main.c:509
#: plug-ins/imagemap/imap_settings.c:148
msgid "<Untitled>"
msgstr ""

#: plug-ins/helpbrowser/helpbrowser.c:768
msgid ""
"GIMP Help Browser Error.\n"
"\n"
"Couldn't find my root html directory."
msgstr ""

#: plug-ins/helpbrowser/helpbrowser.c:791
msgid "GIMP Help Browser"
msgstr ""

#: plug-ins/helpbrowser/helpbrowser.c:806
#, fuzzy
msgid "Back"
msgstr "Nero"

#: plug-ins/helpbrowser/helpbrowser.c:814
msgid "Forward"
msgstr ""

#: plug-ins/ifscompose/ifscompose.c:360
#, fuzzy
msgid "<Image>/Filters/Render/Nature/IfsCompose..."
msgstr "<Image>/Filters/Render/Scacchiera"

#. Asym
#: plug-ins/ifscompose/ifscompose.c:569
msgid "Asymmetry:"
msgstr ""

#. Shear
#: plug-ins/ifscompose/ifscompose.c:583
#, fuzzy
msgid "Shear:"
msgstr "Cerca :"

#. Flip
#: plug-ins/ifscompose/ifscompose.c:597
msgid "Flip"
msgstr ""

#. Simple color control section
#: plug-ins/ifscompose/ifscompose.c:628
#, fuzzy
msgid "Simple"
msgstr "Dimensione"

#: plug-ins/ifscompose/ifscompose.c:640
msgid "IfsCompose: Target"
msgstr ""

#: plug-ins/ifscompose/ifscompose.c:646
#, fuzzy
msgid "Scale Hue by:"
msgstr "Scala 1"

#: plug-ins/ifscompose/ifscompose.c:661
#, fuzzy
msgid "Scale Value by:"
msgstr "Scala 1"

#. Full color control section
#: plug-ins/ifscompose/ifscompose.c:678
msgid "Full"
msgstr ""

#: plug-ins/ifscompose/ifscompose.c:687
#, fuzzy
msgid "IfsCompose: Red"
msgstr "Composizione"

#: plug-ins/ifscompose/ifscompose.c:696
msgid "IfsCompose: Green"
msgstr ""

#: plug-ins/ifscompose/ifscompose.c:705
#, fuzzy
msgid "IfsCompose: Blue"
msgstr "Composizione"

#: plug-ins/ifscompose/ifscompose.c:714
msgid "IfsCompose: Black"
msgstr ""

#: plug-ins/ifscompose/ifscompose.c:793
#, fuzzy
msgid "IfsCompose"
msgstr "Composizione"

#. Window radiobutton
#: plug-ins/ifscompose/ifscompose.c:800 plug-ins/webbrowser/webbrowser.c:345
msgid "New"
msgstr ""

#: plug-ins/ifscompose/ifscompose.c:877 plug-ins/ifscompose/ifscompose.c:1147
#, fuzzy
msgid "Rotate/Scale"
msgstr "Rotazione"

#: plug-ins/ifscompose/ifscompose.c:886 plug-ins/ifscompose/ifscompose.c:1159
#, fuzzy
msgid "Stretch"
msgstr "Configura"

#: plug-ins/ifscompose/ifscompose.c:906
#, fuzzy
msgid "Render Options"
msgstr "Opzioni Salvataggio"

#: plug-ins/ifscompose/ifscompose.c:920 plug-ins/print/print.c:760
msgid "Auto"
msgstr "Auto"

#: plug-ins/ifscompose/ifscompose.c:953
#, fuzzy
msgid "Spatial Transformation"
msgstr "Trasformazione Cubistica"

#: plug-ins/ifscompose/ifscompose.c:959
#, fuzzy
msgid "Color Transformation"
msgstr "Trasformazione Cubistica"

#: plug-ins/ifscompose/ifscompose.c:969
msgid "Relative Probability:"
msgstr ""

#: plug-ins/ifscompose/ifscompose.c:1176
#: plug-ins/imagemap/imap_cmd_select_all.c:50
#: plug-ins/imagemap/imap_menu.c:293
#, fuzzy
msgid "Select All"
msgstr "Seleziona"

#: plug-ins/ifscompose/ifscompose.c:1188
#, fuzzy
msgid "Recompute Center"
msgstr "Ricalcola Anteprima Immagine"

#: plug-ins/ifscompose/ifscompose.c:1212 plug-ins/imagemap/imap_toolbar.c:122
#, fuzzy
msgid "Redo"
msgstr "Rosso"

#: plug-ins/ifscompose/ifscompose.c:1245
#, fuzzy
msgid "IfsCompose Options"
msgstr "Composizione"

#: plug-ins/ifscompose/ifscompose.c:1265
msgid "Max. Memory:"
msgstr ""

#: plug-ins/ifscompose/ifscompose.c:1292
msgid "Subdivide:"
msgstr ""

#: plug-ins/ifscompose/ifscompose.c:1305
msgid "Spot Radius:"
msgstr ""

#: plug-ins/ifscompose/ifscompose.c:1375
#, fuzzy, c-format
msgid "Rendering IFS (%d/%d)..."
msgstr "Rendering Tile..."

#. transfer the image to the drawable
#: plug-ins/ifscompose/ifscompose.c:1394
#, fuzzy, c-format
msgid "Copying IFS to image (%d/%d)..."
msgstr "Composizione..."

#: plug-ins/imagemap/imap_about.c:39
msgid ""
"Imagemap plug-in 1.3\n"
"\n"
"Copyright(c) 1999 by Maurits Rijk\n"
"lpeek.mrijk@consunet.nl \n"
"\n"
"  Released under the GNU General Public License  "
msgstr ""

#: plug-ins/imagemap/imap_circle.c:260
#, fuzzy
msgid "Center x:"
msgstr "Centra"

#: plug-ins/imagemap/imap_circle.c:266
#, fuzzy
msgid "Center y:"
msgstr "Centra"

#: plug-ins/imagemap/imap_cmd_create.c:52
#, fuzzy
msgid "Create"
msgstr "Centra"

#: plug-ins/imagemap/imap_cmd_cut.c:53
#: plug-ins/imagemap/imap_cmd_cut_object.c:51
#: plug-ins/imagemap/imap_menu.c:283 plug-ins/imagemap/imap_toolbar.c:128
msgid "Cut"
msgstr ""

#: plug-ins/imagemap/imap_cmd_delete_point.c:57
#: plug-ins/imagemap/imap_polygon.c:665
#, fuzzy
msgid "Delete Point"
msgstr "Annulla Punti"

#: plug-ins/imagemap/imap_cmd_edit_object.c:50
msgid "Edit Object"
msgstr ""

#: plug-ins/imagemap/imap_cmd_guides.c:70
#, fuzzy
msgid "Create Guides"
msgstr "Crea nuova immagine"

#: plug-ins/imagemap/imap_cmd_guides.c:110
#, c-format
msgid "Resulting Guide Bounds: %d,%d to %d,%d (%d areas)"
msgstr ""

#: plug-ins/imagemap/imap_cmd_guides.c:135
msgid ""
"Guides are pre-defined rectangles covering the image. You define\n"
"them by their width, height, and spacing from each other. This\n"
"allows you to rapidly create the most common image map type -\n"
"image collection of \"thumbnails\", suitable for navigation bars."
msgstr ""

#: plug-ins/imagemap/imap_cmd_guides.c:163 plug-ins/imagemap/imap_grid.c:197
msgid "Width"
msgstr "Larghezza"

#: plug-ins/imagemap/imap_cmd_guides.c:168
msgid "Left Start at"
msgstr ""

#: plug-ins/imagemap/imap_cmd_guides.c:173 plug-ins/imagemap/imap_grid.c:203
#, fuzzy
msgid "Height"
msgstr "Altezza:"

#: plug-ins/imagemap/imap_cmd_guides.c:178
msgid "Top Start at"
msgstr ""

#: plug-ins/imagemap/imap_cmd_guides.c:183
#, fuzzy
msgid "Horz. Spacing"
msgstr "Spaziatura Tile"

#: plug-ins/imagemap/imap_cmd_guides.c:188
msgid "No. Across"
msgstr ""

#: plug-ins/imagemap/imap_cmd_guides.c:193
#, fuzzy
msgid "Vert. Spacing"
msgstr "Spaziatura Tile"

#: plug-ins/imagemap/imap_cmd_guides.c:198
msgid "No. Down"
msgstr ""

#: plug-ins/imagemap/imap_cmd_guides.c:223
#, c-format
msgid "Image dimensions: %d x %d"
msgstr ""

#: plug-ins/imagemap/imap_cmd_guides.c:228
msgid "Resulting Guide Bounds: 0,0 to 0,0 (0 areas)"
msgstr ""

#: plug-ins/imagemap/imap_cmd_guides.c:263
msgid "Guides"
msgstr ""

#: plug-ins/imagemap/imap_cmd_insert_point.c:57
#: plug-ins/imagemap/imap_polygon.c:679
#, fuzzy
msgid "Insert Point"
msgstr "Annulla Punti"

#: plug-ins/imagemap/imap_cmd_move_down.c:52
#: plug-ins/imagemap/imap_cmd_object_down.c:51
msgid "Move Down"
msgstr ""

#: plug-ins/imagemap/imap_cmd_move_sash.c:64
#, fuzzy
msgid "Move Sash"
msgstr "Muovi Tracciato"

#: plug-ins/imagemap/imap_cmd_move_selected.c:52
msgid "Move Selected Objects"
msgstr ""

#: plug-ins/imagemap/imap_cmd_move_up.c:52
#: plug-ins/imagemap/imap_cmd_object_up.c:51
#, fuzzy
msgid "Move Up"
msgstr "Muovi Tracciato"

#: plug-ins/imagemap/imap_cmd_paste.c:48 plug-ins/imagemap/imap_menu.c:289
#: plug-ins/imagemap/imap_popup.c:152 plug-ins/imagemap/imap_toolbar.c:134
#, fuzzy
msgid "Paste"
msgstr "Pattern:"

#: plug-ins/imagemap/imap_cmd_select_next.c:51
#, fuzzy
msgid "Select Next"
msgstr "Seleziona"

#: plug-ins/imagemap/imap_cmd_select_region.c:63
#, fuzzy
msgid "Select Region"
msgstr "Seleziona Pattern:"

#: plug-ins/imagemap/imap_cmd_send_to_back.c:51
#: plug-ins/imagemap/imap_toolbar.c:157
#, fuzzy
msgid "Send To Back"
msgstr "Invia per e-mail"

#: plug-ins/imagemap/imap_cmd_unselect.c:49
#, fuzzy
msgid "Unselect"
msgstr "Seleziona"

#: plug-ins/imagemap/imap_cmd_unselect_all.c:50
msgid "Unselect All"
msgstr ""

#: plug-ins/imagemap/imap_default_dialog.c:123
#, fuzzy
msgid "Help..."
msgstr "Aiuto"

#: plug-ins/imagemap/imap_edit_area_info.c:167
#, fuzzy
msgid "Link Type"
msgstr "Tipo Media:"

#: plug-ins/imagemap/imap_edit_area_info.c:176
msgid "Web Site"
msgstr ""

#: plug-ins/imagemap/imap_edit_area_info.c:182
#, fuzzy
msgid "Ftp Site"
msgstr "Dimensione area"

#: plug-ins/imagemap/imap_edit_area_info.c:188
msgid "Gopher"
msgstr ""

#: plug-ins/imagemap/imap_edit_area_info.c:194
#, fuzzy
msgid "Other"
msgstr "Altri"

#: plug-ins/imagemap/imap_edit_area_info.c:200
#: plug-ins/imagemap/imap_menu.c:210 plug-ins/print/print.c:3124
msgid "File"
msgstr "File"

#: plug-ins/imagemap/imap_edit_area_info.c:206
msgid "WAIS"
msgstr ""

#: plug-ins/imagemap/imap_edit_area_info.c:212
#, fuzzy
msgid "Telnet"
msgstr "Seleziona"

#: plug-ins/imagemap/imap_edit_area_info.c:218
msgid "e-mail"
msgstr ""

#: plug-ins/imagemap/imap_edit_area_info.c:224
msgid "URL to activate when this area is clicked: (required)"
msgstr ""

#: plug-ins/imagemap/imap_edit_area_info.c:234
msgid "Relative link"
msgstr ""

#: plug-ins/imagemap/imap_edit_area_info.c:240
msgid "Target frame name/ID: (optional - used for FRAMES only)"
msgstr ""

#: plug-ins/imagemap/imap_edit_area_info.c:244
msgid "Comment about this area: (optional)"
msgstr ""

#: plug-ins/imagemap/imap_edit_area_info.c:247
#, fuzzy
msgid "Link"
msgstr "Lineare"

#: plug-ins/imagemap/imap_edit_area_info.c:282
#, fuzzy
msgid "Dimensions"
msgstr "Vettore direzione"

#: plug-ins/imagemap/imap_edit_area_info.c:324
#, fuzzy
msgid "JavaScript"
msgstr "Salva come PostScript"

#: plug-ins/imagemap/imap_edit_area_info.c:415
#, fuzzy
msgid "Area Settings"
msgstr "Configurazioni"

#: plug-ins/imagemap/imap_edit_area_info.c:458
#, fuzzy, c-format
msgid "Area #%d Settings"
msgstr "Configurazioni Avanzate"

#: plug-ins/imagemap/imap_file.c:46 plug-ins/imagemap/imap_menu.c:65
#, fuzzy
msgid "Error opening file"
msgstr "Errore di apertura file \"%s\" in lettura!\n"

#: plug-ins/imagemap/imap_file.c:55
msgid "Load Imagemap"
msgstr ""

#: plug-ins/imagemap/imap_file.c:78
#, fuzzy
msgid "File exists!"
msgstr "Altezza Tile"

#: plug-ins/imagemap/imap_file.c:83
msgid ""
"File already exists.\n"
"  Do you really want to overwrite?  "
msgstr ""

#: plug-ins/imagemap/imap_file.c:115
msgid "Save Imagemap"
msgstr ""

#: plug-ins/imagemap/imap_file.c:138
msgid "Error"
msgstr ""

#: plug-ins/imagemap/imap_grid.c:142
#, fuzzy
msgid "Grid Settings"
msgstr "Configurazioni"

#: plug-ins/imagemap/imap_grid.c:153
msgid "Snap-To Grid Enabled"
msgstr ""

#: plug-ins/imagemap/imap_grid.c:159
msgid "Grid Visibility and Type"
msgstr ""

#: plug-ins/imagemap/imap_grid.c:166
msgid "Hidden"
msgstr ""

#: plug-ins/imagemap/imap_grid.c:173
#, fuzzy
msgid "Lines"
msgstr "Lineare"

#: plug-ins/imagemap/imap_grid.c:182
#, fuzzy
msgid "Crosses"
msgstr "Chiudi"

#: plug-ins/imagemap/imap_grid.c:189
msgid "Grid Granularity"
msgstr ""

#: plug-ins/imagemap/imap_grid.c:212
#, fuzzy
msgid "Grid Offset"
msgstr "Sposta"

#: plug-ins/imagemap/imap_grid.c:223
msgid "pixels from left"
msgstr ""

#: plug-ins/imagemap/imap_grid.c:228
msgid "pixels from top"
msgstr ""

#: plug-ins/imagemap/imap_main.c:142
#, fuzzy
msgid "<Image>/Filters/Web/ImageMap..."
msgstr "<Image>/Filters/Map/Bump Map"

#: plug-ins/imagemap/imap_main.c:657
msgid "Data changed"
msgstr ""

#: plug-ins/imagemap/imap_main.c:661
msgid ""
"   Some data has been changed.   \n"
"Do you really want to continue?"
msgstr ""

#: plug-ins/imagemap/imap_menu.c:214
msgid "Open..."
msgstr ""

#: plug-ins/imagemap/imap_menu.c:220
#, fuzzy
msgid "Save As..."
msgstr "Salva"

#: plug-ins/imagemap/imap_menu.c:223
#, fuzzy
msgid "Preferences..."
msgstr "Differenza"

#: plug-ins/imagemap/imap_menu.c:242
#, fuzzy, c-format
msgid "Undo %s"
msgstr "Seme casuale"

#: plug-ins/imagemap/imap_menu.c:253
#, fuzzy, c-format
msgid "Redo %s"
msgstr "Rosso"

#: plug-ins/imagemap/imap_menu.c:300
msgid "Edit Area Info..."
msgstr ""

#: plug-ins/imagemap/imap_menu.c:312
msgid "View"
msgstr ""

#: plug-ins/imagemap/imap_menu.c:316
#, fuzzy
msgid "Area List"
msgstr "Configurazioni"

#: plug-ins/imagemap/imap_menu.c:320
#, fuzzy
msgid "Source..."
msgstr "Altri..."

#: plug-ins/imagemap/imap_menu.c:328
#, fuzzy
msgid "Grayscale"
msgstr "Scala Gradiente"

#: plug-ins/imagemap/imap_menu.c:340
msgid "Zoom In"
msgstr ""

#: plug-ins/imagemap/imap_menu.c:343
msgid "Zoom Out"
msgstr ""

#: plug-ins/imagemap/imap_menu.c:348
msgid "Zoom To"
msgstr ""

#: plug-ins/imagemap/imap_menu.c:378
#, fuzzy
msgid "Mapping"
msgstr "Assenza di memoria per il mapping dei colori"

#: plug-ins/imagemap/imap_menu.c:381 plug-ins/imagemap/imap_popup.c:128
msgid "Arrow"
msgstr ""

#: plug-ins/imagemap/imap_menu.c:383 plug-ins/imagemap/imap_popup.c:131
#: plug-ins/imagemap/imap_rectangle.c:59
#, fuzzy
msgid "Rectangle"
msgstr "Rotazione"

#: plug-ins/imagemap/imap_menu.c:391
msgid "Edit Map Info..."
msgstr ""

#: plug-ins/imagemap/imap_menu.c:398
msgid "Goodies"
msgstr ""

#: plug-ins/imagemap/imap_menu.c:400 plug-ins/imagemap/imap_popup.c:148
#, fuzzy
msgid "Grid Settings..."
msgstr "Configurazioni"

#: plug-ins/imagemap/imap_menu.c:402
#, fuzzy
msgid "Create Guides..."
msgstr "Crea nuova immagine"

#: plug-ins/imagemap/imap_menu.c:412
#, fuzzy
msgid "About ImageMap..."
msgstr "Informazioni"

#: plug-ins/imagemap/imap_polygon.c:390
msgid "x (pixels)"
msgstr ""

#: plug-ins/imagemap/imap_polygon.c:390
msgid "y (pixels)"
msgstr ""

#: plug-ins/imagemap/imap_polygon.c:454
msgid "Append"
msgstr ""

#: plug-ins/imagemap/imap_popup.c:124
msgid "Map Info..."
msgstr ""

#: plug-ins/imagemap/imap_popup.c:127
msgid "Tools"
msgstr ""

#: plug-ins/imagemap/imap_popup.c:141
#, fuzzy
msgid "In"
msgstr "Pollici"

#: plug-ins/imagemap/imap_popup.c:143
#, fuzzy
msgid "Out"
msgstr "Uscita :"

#: plug-ins/imagemap/imap_popup.c:150
#, fuzzy
msgid "Guides..."
msgstr "Ghigliottina..."

#: plug-ins/imagemap/imap_rectangle.c:374
msgid "Upper left x:"
msgstr ""

#: plug-ins/imagemap/imap_rectangle.c:380
msgid "Upper left y:"
msgstr ""

#: plug-ins/imagemap/imap_selection.c:335
msgid "URL"
msgstr ""

#: plug-ins/imagemap/imap_selection.c:335
#, fuzzy
msgid "Target"
msgstr "magenta"

#: plug-ins/imagemap/imap_selection.c:335
#, fuzzy
msgid "Comment"
msgstr "Commento GIF: "

#. Create selection
#: plug-ins/imagemap/imap_selection.c:356 plug-ins/rcm/rcm_dialog.c:664
#, fuzzy
msgid "Selection"
msgstr "Seleziona"

#: plug-ins/imagemap/imap_settings.c:67
msgid "Settings for this Mapfile"
msgstr ""

#: plug-ins/imagemap/imap_settings.c:81
#, fuzzy
msgid "Image name:"
msgstr "Nome base:"

#: plug-ins/imagemap/imap_settings.c:82
#, fuzzy
msgid "Select Image File"
msgstr "Seleziona Campo dei Frame"

#: plug-ins/imagemap/imap_settings.c:86
#, fuzzy
msgid "Title:"
msgstr "File"

#: plug-ins/imagemap/imap_settings.c:88
#: plug-ins/script-fu/script-fu-scripts.c:1927
#, fuzzy
msgid "Author:"
msgstr "Autore :"

#: plug-ins/imagemap/imap_settings.c:90
#, fuzzy
msgid "Default URL:"
msgstr "Valori Base"

#: plug-ins/imagemap/imap_settings.c:107
#, fuzzy
msgid "Map file format"
msgstr "Formato video"

#: plug-ins/imagemap/imap_source.c:54
#, fuzzy
msgid "View Source"
msgstr "Sorgente Media:"

#: plug-ins/imagemap/imap_toolbar.c:114
#, fuzzy
msgid "Preferences"
msgstr "Differenza"

#: plug-ins/imagemap/imap_toolbar.c:141
msgid "Zoom in"
msgstr ""

#: plug-ins/imagemap/imap_toolbar.c:144
msgid "Zoom out"
msgstr ""

#: plug-ins/imagemap/imap_toolbar.c:149
msgid "Edit Map Info"
msgstr ""

#: plug-ins/imagemap/imap_toolbar.c:153
msgid "Move To Front"
msgstr ""

#: plug-ins/imagemap/imap_tools.c:127
#, fuzzy
msgid "Select existing area"
msgstr "Seleziona"

#: plug-ins/imagemap/imap_tools.c:131
#, fuzzy
msgid "Define Rectangle area"
msgstr "Rotazione"

#: plug-ins/imagemap/imap_tools.c:135
msgid "Define Circle/Oval area"
msgstr ""

#: plug-ins/imagemap/imap_tools.c:139
msgid "Define Polygon area"
msgstr ""

#: plug-ins/imagemap/imap_tools.c:143
msgid "Edit selected area info"
msgstr ""

#: plug-ins/imagemap/imap_tools.c:147
#, fuzzy
msgid "Delete selected area"
msgstr "Utilizza tutti i livelli non selezionati"

#: plug-ins/maze/algorithms.c:282
msgid "Constructing maze using Prim's Algorithm..."
msgstr ""

#: plug-ins/maze/algorithms.c:451
msgid "Constructing tileable maze using Prim's Algorithm..."
msgstr ""

#: plug-ins/maze/maze.c:154
#, c-format
msgid ""
"Generates a maze using either the depth-first search method or Prim's "
"algorithm.  Can make tileable mazes too.  See %s for more help."
msgstr ""

#: plug-ins/maze/maze.c:161
#, fuzzy
msgid "<Image>/Filters/Render/Pattern/Maze..."
msgstr "<Image>/Filters/Render/Scacchiera"

#: plug-ins/maze/maze.c:403
msgid "Drawing Maze..."
msgstr ""

#: plug-ins/maze/maze_face.c:237
#, fuzzy, c-format
msgid "Selection is %dx%d"
msgstr "Seleziona"

#. Set up Options page
#: plug-ins/maze/maze_face.c:251
#, fuzzy
msgid "Maze Options"
msgstr "Opzioni Salvataggio"

#. Tileable checkbox
#: plug-ins/maze/maze_face.c:266
msgid "Tileable?"
msgstr ""

#: plug-ins/maze/maze_face.c:287 plug-ins/maze/maze_face.c:315
#, fuzzy
msgid "Pieces:"
msgstr "Pagine:"

#: plug-ins/maze/maze_face.c:307
#, fuzzy
msgid "Height (Pixels):"
msgstr "Altezza:"

#. Set up other page
#: plug-ins/maze/maze_face.c:341
msgid "At Your Own Risk"
msgstr ""

#. Multiple input box
#: plug-ins/maze/maze_face.c:353
#, fuzzy
msgid "Multiple (57):"
msgstr "Multiplo"

#. Offset input box
#: plug-ins/maze/maze_face.c:370
#, fuzzy